# sanic_nacos

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  sanic_nacos.py
test/: test_sanic_nacos.py
